@startuml Database_Diagram
class Author{
    String first_name
    String middle_name
    String last_name
    Integer age
    Date create_date
    Date update_date
}

class Book{
    Authors[] authors
    String title
    Integer pages
    Date create_date  
    Date update_date
}

class User{
    String first_name
    String middle_name
    String last_name
    Integer age
    String user_name
    String password
    String email
    Boolean is_registered
    Boolean is_admin
    Date create_date
    Date update_date
}

class Comment{
    String Comment
    User user
    Book book
    Date create_date
    Date update_date
}

Book<|---*Author
Comment<|---Book
Comment<|--- User


@enduml
 
